samples/_failures_safe/1761130213_495a85_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8dc5ca9a.c: In function ‘main’:
./samples/SAFE/__tmp_8dc5ca9a.c:153:17: error: expected declaration or statement at end of input
  153 |                 int status = add_matrices(&mat1, &mat2, &result);
      |                 ^~~
./samples/SAFE/__tmp_8dc5ca9a.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8dc5ca9a.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8dc5ca9a.c:153:17: error: expected declaration or statement at end of input
